--- a/k8s/log-message-processor/deployment.yaml
+++ b/k8s/log-message-processor/deployment.yaml
@@ -1,10 +1,14 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
     app: microservice-app-example
   name: log-message-processor
 spec:
+  selector:
+    matchLabels:
+      app: microservice-app-example
+      service: log-message-processor
   replicas: 1
   template:
     metadata:
