--- a/auth-api/Dockerfile
+++ b/auth-api/Dockerfile
@@ -4,11 +4,12 @@ EXPOSE 8081
 
 WORKDIR /go/src/app
 RUN apk --no-cache add curl git && \
-    curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+  curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 
 COPY . .
 RUN dep ensure
 
+RUN apk add build-base
 RUN go build -o auth-api
 
 CMD /go/src/app/auth-api
