--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,8 @@
     "zipkin-transport-http": "^0.11.2"
   },
   "devDependencies": {
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
+    "sass": "^1.32.0",
+    "sass-loader": "^7.3.1",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
