--- a/k8s/frontend/deployment.yaml
+++ b/k8s/frontend/deployment.yaml
@@ -26,9 +26,8 @@ spec:
           value: http://todos-api:8082
         - name: ZIPKIN_URL
           value: http://zipkin:9411/api/v2/spans
-        image: frontend
+        image: localhost:5000/frontend
         name: frontend
         ports:
         - containerPort: 8080
-        imagePullPolicy: Never
       restartPolicy: Always
