--- a/k8s/log-message-processor/deployment.yaml
+++ b/k8s/log-message-processor/deployment.yaml
@@ -27,7 +27,6 @@ spec:
         - name: ZIPKIN_URL
           value: http://zipkin:9411/api/v1/spans
           
-        image: log-message-processor
+        image: localhost:5000/log-message-processor
         name: log-message-processor
-        imagePullPolicy: Never
       restartPolicy: Always
