--- a/k8s/redis-queue/deployment.yaml
+++ b/k8s/redis-queue/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: redis-queue
-        image: redis
+        image: localhost:5000/redis
         ports:
         - containerPort: 6379
       restartPolicy: Always
